--- a/haskell-hole.cabal
+++ b/haskell-hole.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f7f7f4493b6f3424b5c3159c79324e1c41d073d6b2099aca316e03e26a63ff12
+-- hash: 78223b414980c97d03beae8c1ea2625801366eb4af760c0eaad8b8ea9be7c155
 
 name:           haskell-hole
 version:        0.1.0.0
@@ -77,6 +77,22 @@ executable holed
       base >=4.7 && <5
     , haskell-hole
     , optparse-applicative
+  default-language: Haskell2010
+
+executable peerd
+  main-is: peerd.hs
+  other-modules:
+      Paths_haskell_hole
+  hs-source-dirs:
+      app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , bytestring
+    , haskell-hole
+    , metro
+    , metro-socket
+    , unliftio
   default-language: Haskell2010
 
 test-suite haskell-hole-test
