--- a/haskell-hole.cabal
+++ b/haskell-hole.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f1cb45b9f13c922ab30e298d8b6aadaf055d36c0255a294ebb3f93cb1270247d
+-- hash: fd3ce22a27348690e5fee19b5b80bae9515b89878fc4e9f91567b8e2821b3a60
 
 name:           haskell-hole
 version:        0.1.0.0
@@ -93,6 +93,7 @@ executable peerd
     , haskell-hole
     , metro
     , metro-socket
+    , network
     , unliftio
   default-language: Haskell2010
 
